--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -144,6 +144,21 @@
         app:layout_constraintTop_toBottomOf="@id/tv_check_time"
          />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:layout_marginEnd="23dp"
+        android:clickable="true"
+        android:backgroundTint="@color/orange"
+        app:srcCompat="@drawable/ic_map"
+        app:borderWidth="0dp"
+        app:tint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteX="268dp"
+        tools:layout_editor_absoluteY="649dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
